--- a/UFAR.NM.API/Views/Invitors/Add.cshtml
+++ b/UFAR.NM.API/Views/Invitors/Add.cshtml
@@ -1,30 +1,33 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
+@* Razor view directive for enabling MVC *@
+@* For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860 *@
+
+@{ /* Razor view code block */ }
 
 @model UFAR.NM.API.Models.AddInvatorsViewModel
 
+<!-- Container for the form -->
 <div class="form-container">
+    <!-- Heading for the form -->
     <h1 style="color: #4CAF50;"> Add Inviters</h1>
-<form method="post" asp-action="Add">
-     <div asp-validation-summary="All"></div>
-   
+    <!-- Form start -->
+    <form method="post" asp-action="Add">
+        <!-- Validation summary -->
+        <div asp-validation-summary="All"></div>
+        
+        <!-- Name input field -->
         <label class="form-label">Name</label>
-        <input type="text"  asp-for="Name"/>
-   
+        <input type="text" asp-for="Name"/>
+        
+        <!-- Email input field -->
         <label class="form-label">Email</label>
         <input type="text" asp-for="Email" />
-  
+        
+        <!-- Phone input field -->
         <label class="form-label">Phone</label>
         <input type="text" asp-for="Phone" />
-        <input type="submit" class="btn  btn-success" value="Save">
-</form>
+        
+        <!-- Submit button -->
+        <input type="submit" class="btn btn-success" value="Save">
+    </form>
+    <!-- Form end -->
 </div>
-
-
-
-
-
-
